--- a/src/AIShell/Pages/Index.razor
+++ b/src/AIShell/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@namespace AIShell.Pages
 @page "/"
 
-<h3>AIShell是一个可以快速创建AgentDemo示例进行测试体验的平台</h3>
+<h3>AIShell是一个集成大模型的Sheel平台工具</h3>
 
 @code {
 
