--- a/src/AIShell/Pages/_Host.cshtml
+++ b/src/AIShell/Pages/_Host.cshtml
@@ -16,6 +16,9 @@
     <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
     <link href="./css/site.css" rel="stylesheet" />
     <link href="AIShell.styles.css" rel="stylesheet" />
+
+    <link href="_content/BlazorComponents.Terminal/style.css" rel="stylesheet" />
+    <link href="_content/BlazorComponents.Terminal/theme.default.css" rel="stylesheet" />
 </head>
 <body>
     <app>
