--- a/src/AIShell/Pages/Shell/ShellPage.razor
+++ b/src/AIShell/Pages/Shell/ShellPage.razor
@@ -1,7 +1,7 @@
 ﻿@namespace AIShell.Pages.Shell
 @using Domain.Domain.Model.Enum
 @using BlazorComponents.Terminal
-@page "/shell"
+@page "/shell/{Id}"
 
 <PageContainer Title="命令工具">
     <ChildContent>
