--- a/src/AIShell/Pages/Model/ModelSetting.razor
+++ b/src/AIShell/Pages/Model/ModelSetting.razor
@@ -16,7 +16,7 @@
                     </RadioGroup>
                 </FormItem>
 
-                @if (context.AIType == AIType.AzureOpenAI)
+                @if (context.AIType == AIType.OpenAI)
                 {
                     <FormItem Label="请求地址" LabelCol="LayoutModel._formItemLayout.LabelCol" WrapperCol="LayoutModel._formItemLayout.WrapperCol">
                         <InputPassword Placeholder="请输入请求地址" @bind-Value="@context.EndPoint" />
